# Rogue2.Official

./: AUTHORS  COPYING  ChangeLog  ChangeLog-0  INSTALL  MAIN.SH  MANIFEST  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  config.h  config.h.in  config.status  configure  configure.ac  mesg.utf-8  mesg_J  rogue  rogue.doc
Debug/: makefile  sources.mk
Debug/src.bak/: subdir.mk
Debug/src.euc/: subdir.mk
Debug/src.utf8/: display.d  hit.d  init.d  invent.d  level.d  machdep.d  main.d  message.d  monster.d  move.d  object.d  pack.d  subdir.mk
autom4te.cache/: output.0  requests  traces.0
doc/: Makefile  Makefile.am  Makefile.in  options.doc
man/: Makefile  Makefile.am  Makefile.in  rogue.man
msg/: Makefile  Makefile.am  Makefile.in  mesg_E
src/: Makefile  Makefile.am  Makefile.in  display.c  display.h  hit.c  hit.h  init.c  init.h  invent.c  invent.h  level.c  level.h  machdep.c  machdep.h  main.c  main.h  message.c  message.h  monster.c  monster.h  move.c  move.h  object.c  object.h  pack.c  pack.h  play.c  play.h  random.c  random.h  ring.c  rogue.h  room.c  save.c  save.h  score.c  score.h  spechit.c  throw.c  (+6 more)
src.euc/: Makefile  display.c  display.h  hit.c  hit.h  init.c  init.h  invent.c  invent.h  level.c  level.h  machdep.c  machdep.h  main.c  main.h  message.c  message.h  monster.c  monster.h  move.c  move.h  object.c  object.h  pack.c  pack.h  play.c  play.h  random.c  random.h  ring.c  ring.h  rogue  rogue.h  room.c  room.h  save.c  save.h  score.c  score.h  spechit.c  (+9 more)
src.utf8/: Makefile.am  Makefile.in  display.c  fl  hit.c  init.c  invent.c  main.c  message.c  move.c  object.c  pack.c  play.c  ring.c  ring.h  room.h  save.c  score.c  spechit.h  zap.c  zap.h
src.utf8/.deps/: rogue-display.Po  rogue-hit.Po  rogue-init.Po  rogue-invent.Po  rogue-level.Po  rogue-machdep.Po  rogue-main.Po  rogue-message.Po  rogue-monster.Po  rogue-move.Po  rogue-object.Po  rogue-play.Po  rogue-room.Po  rogue-save.Po  rogue-score.Po  rogue-spechit.Po  rogue-throw.Po  rogue-trap.Po  rogue-use.Po  rogue-zap.Po
(+46 files in other folders)
