bin_PROGRAMS = rogue

rogue_SOURCES = \
	rogue.h \
	display.c display.h \
	hit.c hit.h \
	init.c init.h \
	invent.c invent.h \
	level.c level.h \
	machdep.c machdep.h \
	main.c main.h \
	message.c message.h \
	monster.c monster.h \
	move.c move.h \
	object.c object.h \
	pack.c pack.h \
	play.c play.h \
	random.c random.h \
	ring.c ring.h \
	room.c room.h \
	save.c save.h \
	score.c score.h \
	spechit.c spechit.h \
	throw.c throw.h \
	trap.c trap.h \
	use.c use.h \
	zap.c zap.h

rogue_CFLAGS = \
	-DJAPAN \
	-DEUC \
	-DTOPSCO
